# ollama-prompt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  PR7-REVIEW-NOTES.md  README.md  ollama-prompt-TODO.md  pyproject.toml  setup.py  sub-agents-compared.md  test_security_fixes.py  test_windows_regex.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
analysis/: cogent-context-efficiency-analysis.md  multi-agent-parallel-analysis-pattern.md
docs/: README.md  reference.md  session_management.md  subprocess-best-practices.md
docs/article/: notes.md
docs/guides/: ai-vs-grep-verification.md  use-cases.md
docs/implementation-plans/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ADDENDUM.md  IMPLEMENTATION_ROADMAP.md  MODEL_MANIFEST_SYSTEM.md  README.md  (+8 more)
examples/: session_usage.py
ollama_prompt/: __init__.py  cli.py  context_manager.py  file_chunker.py  model_manifest.py  model_scanner.py  model_utils.py  models.py  secure_file.py  session_db.py  session_manager.py  session_utils.py  vector_embedder.py
ollama_prompt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
planning/: ollama-prompt-session-memory-comprehensive-plan.md  session-api-analysis.md  session-cli-analysis.md  session-db-design.md  session-implementation-roadmap.md
tests/: test_cli_integration.py  test_context_manager.py  test_context_persistence.py  test_directory_syntax.py  test_file_chunker.py  test_model_manifest.py  test_model_scanner.py  test_secure_file.py  test_session_db.py  test_session_db_v2.py  test_session_manager_integration.py  test_vector_embedder.py
(+3 files in other folders)
